[package]
name = "rust-rogue"
version = "0.1.0"
authors = ["Joel Hofgren <joel.hofgren@squeed.com>"]
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2"
serde_derive = "1.0.117"
